--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
             laudantium architecto ipsa. Nesciunt.
           </p>
           <div class="button-container">
-            <button class="prev-button">
+            <button class="prev-btn">
               <i class="fas fa-chevron-left"></i>
             </button>
-            <button class="next-button">
+            <button class="next-btn">
               <i class="fas fa-chevron-right"></i>
             </button>
           </div>
